--- a/mynotes-flutter/pubspec.yaml
+++ b/mynotes-flutter/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   flutter_secure_storage: ^8.0.0
+  sqflite: ^2.2.6
+  path_provider: ^2.0.14
+  path: ^1.8.2
+  drift: ^2.6.0
 
 dev_dependencies:
   flutter_test:
