--- a/mynotes-flutter/pubspec.yaml
+++ b/mynotes-flutter/pubspec.yaml
@@ -34,15 +34,25 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   http: ^0.13.5
   flutter_secure_storage: ^8.0.0
   sqflite: ^2.2.6
   path_provider: ^2.0.14
   path: ^1.8.2
   drift: ^2.6.0
+  sqlite3_flutter_libs: ^0.5.13
+  analyzer: ^5.10.0
+  json_serializable: ^6.6.1
+  json_annotation: ^4.8.0
+  connectivity_plus: ^3.0.3
+  get_it: ^7.2.0
+  injectable: ^2.1.1
 
 dev_dependencies:
+  drift_dev: ^2.6.0
+  build_runner: ^2.3.3
+  injectable_generator:
   flutter_test:
     sdk: flutter
 
@@ -51,7 +61,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
